--- a/YUKI.N/YUKI.N2.html
+++ b/YUKI.N/YUKI.N2.html
@@ -7,6 +7,8 @@
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta http-equiv="Pragma" content="no-cache">
 <meta name="Author" content="Nagisa.">
+<meta name="theme-color" content="#000000">
+<meta name="viewport" content="width=420,user-scalable=no" >
 <!--******************************
 **          Copyright.          **
 **  Suzumiya Haruhi no Yuuutsu  **
