--- a/YUKI.N/index.html
+++ b/YUKI.N/index.html
@@ -7,6 +7,8 @@
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta http-equiv="Pragma" content="no-cache">
 <meta name="Author" content="Nagisa.">
+<meta name="theme-color" content="#000000">
+<meta name="viewport" content="width=420,user-scalable=no" >
 <!--******************************
 **          Copyright.          **
 **  Suzumiya Haruhi no Yuuutsu  **
@@ -20,6 +22,7 @@
 **        written permission.   **
 ********************************-->
 <title>YUKI.N</title>
+<link rel="manifest" href="./manifest.json">
 <link rel="stylesheet" type="text/css" href="YUKI.N.css">
 <link rel="SHORTCUT ICON" href="../YUK_N.ico">
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js">
@@ -35,11 +38,13 @@ YUKI.N>また図書館に<br />
 第14話 「涼宮ハルヒの憂鬱Ⅵ」<br />
 このページはJAVAScriptを使用しています<br />
 </noscript>
+<div id="container">
 <script src="YUKI.N_Script.js"></script>
-<div style="position:absolute; bottom:1px; right:1px;width:100%;text-align:right;">
+<div id="footer">
 <a href="https://twitter.com/share" class="twitter-share-button" data-via="nagisato">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 <g:plusone size="small" href="https://130cmwolf.github.io/YUKI.N/"></g:plusone>
 <a href="http://clap.webclap.com/clap.php?id=nagisato" target="_blank" onclick="window.open('http://clap.webclap.com/clap.php?id=nagisato','webclap','toolbar=no,location=no,directories=no,status=no,scrollbars=yes,resizable=yes');return false;"><img src="http://img.webclap.com/webclap/button/off.php?img=39" style="border:0px;" /></a>
+</div>
 </div>
 </body>
 </html>
