--- a/YUKI.N/index.html
+++ b/YUKI.N/index.html
@@ -43,6 +43,7 @@ YUKI.N>また図書館に<br />
 <div id="footer">
 <a href="https://twitter.com/share" class="twitter-share-button" data-via="nagisato">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 <g:plusone size="small" href="https://130cmwolf.github.io/YUKI.N/"></g:plusone>
+<form action="http://clap.webclap.com/clap.php?id=nagisato" method="post" target="_blank" style="margin:0px;"><input type="submit" value="Web拍手" onclick="window.open('http://clap.webclap.com/clap.php?id=nagisato','webclap','toolbar=no,location=no,directories=no,status=no,scrollbars=yes,resizable=yes');return false;"></form>
 </div>
 </div>
 </body>
